--- a/eatsmart/templates/inspections/establishment_detail.html
+++ b/eatsmart/templates/inspections/establishment_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
-
+{% load establishmentdetailstags %}
 {% block content %}
 <h2>{{ establishment }}</h2>
 
@@ -29,15 +29,7 @@
         </div>
         <div id="collapse{{ forloop.counter }}" class="accordion-body collapse">
             <div class="accordion-inner">
-                <table class="table table-striped">
-                    <tbody>
-                    {% for key, value in inspection.dump.items %}
-                    <tr>
-                        <td>{{ key }}</td><td>{{ value }}</td>
-                    </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                {% details_to_table inspection %}
             </div>
         </div>
         {% endfor %}
