Added violations to details view.  Reduced the number of details fields we're dumping.

--- a/eatsmart/templates/inspections/establishment_detail.html
+++ b/eatsmart/templates/inspections/establishment_detail.html
@@ -14,7 +14,9 @@
         <h3>
             {{establishment.premise_address1|title }}<br/>
             {% if establishment.premise_address2 and establishment.premise_address2 != '0' %} {{establishment.premise_address2|title }}<br/>{%endif%}
-            {{establishment.premise_city|title }}, {{establishment.premise_state }} {{establishment.premise_zip }}
+            {{establishment.premise_city|title }}, {{establishment.premise_state }} {{establishment.premise_zip }}<br/>
+            <br/>
+            {% if inspections.values and not inspections.values|length_is:'0' %}{{ inspections.values.first.final_score_sum }}<br/>{% endif %}
         </h3>
     </div>
 </div>
@@ -25,7 +27,8 @@
         <div class="accordion-heading">
             <a class="accordion-toggle list-group-item" data-toggle="collapse" data-parent="#inspection-details-accordion"
                href="#collapse{{ forloop.counter }}">
-                {{ inspection.insp_date|date:"M dS Y" }} - {{ inspection.grade }}
+                {{ inspection.insp_date|date:"M dS Y" }}
+                {% if inspection.final_score_sum != '0' %}<span class="badge">{{ inspection.final_score_sum }}</span>{% endif %}
             </a>
         </div>
         <div id="collapse{{ forloop.counter }}" class="accordion-body collapse">
